increase padding around narrative blocks and prevent zoomed images from overflowing

--- a/_extensions/closeread/grid.scss
+++ b/_extensions/closeread/grid.scss
@@ -16,14 +16,11 @@
     
     /* extended wrapper around content to allow early scroll detection */
     > * {
-      padding-block-start: 20svh;
-      padding-block-end: 20svh;
+      padding-block-start: 45svh;
+      padding-block-end: 45svh;
       vertical-align: middle;
-
-      /* styling for actual content (*/
-      > * {
-        padding: 15px;
-      }
+      padding-left: 30px;
+      padding-right: 30px;
 
     p {
       margin-bottom: 0;
@@ -40,6 +37,7 @@
       display: grid;
       height: 100svh;
       position: sticky;
+      overflow: hidden;
       top: 0;
 
       [id^="cr-"] {
